@@ -30,6 +30,8 @@
  * Added support for making bootstrap retry if nodes flap (CASSANDRA-2644)
  * Added statusthrift to nodetool to report if thrift server is running (CASSANDRA-2722)
  * Fixed rows being cached if they do not exist (CASSANDRA-2723)
+ * Add CQL ALTER TABLE (CASSANDRA-1709)
+
 
 0.8.0-final
  * fix CQL grammar warning and cqlsh regression from CASSANDRA-2622
